GNOME Bugzilla – Bug 755336
Nautilus no longer recursively searches
Last modified: 2017-08-23 18:32:38 UTC
Previously, when searching, Nautilus would search the current folder and everything below it. Now as of nautilus-3.17.91-1.fc23.x86_64 (Fedora 23 alpha's latest Nautilus), only results from the current directory are returned. Nautilus should return all results that match below the current directory, as it did before. To reproduce, run a search in a folder for a file in a subfolder (or below). Example: If you are in "logos", then search for "svg", which should contain the result "logos/gnome/gnome-logo.svg" (among others, if other svg files exist).
Notes: 1. This is on a local filesystem. It also doesn't work on remote filesystems, but I have head that is (sadly) intended. (BTW: I use recursive search on remote filesystems daily, both sshfs for a remote server halfway around the world, and an SMB share on my NAS sitting under my desk.) 2. I've toggled the "enable-recursive-search" option in "org.gnome.nautilus.preferences" — in both states, I get the same results (that is, no recursive search locally).
I'm getting similar results with 3.17.91, recursive no longer works for local filesystem.
Created attachment 311907 [details] [review] query-editor: use real location for search Most of the times we were using as a location the invented uri for the search directory as a model for the search, which is wrong and the search was no returning results and the view loading the cached files. Before the window slot changes done a few weeks ago this was fine because we didn't set more than once the location of the query editor in a single search. So we were protected about this situation. However now with the isolation of the model, the window slot is unaware of the details of the model (if it is an invented uri or not) so can't control that. To fix it, make the query editor aware of the type of model used, and in case of it being a search directory, use the base model as a location for the search, and if not, use the file location uri.
Tricky one, has nothing to do with recursive, but seemed so given the cache use by nautilus. Attachment 311907 [details] pushed as 9dbe133 - query-editor: use real location for search
*** Bug 755714 has been marked as a duplicate of this bug. ***